--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
+    "react-chrono": "^1.12.1",
     "react-dom": "^17.0.2",
+    "react-horizontal-timeline": "^1.5.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
