--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moma-website",
-  "homepage": "http://alan.vision/moma-website",
+  "homepage": "https://moma.stanford.edu/",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8000",
